syntax = "proto3";

message AppDbRecord
{
    string userId    = 1; // REQUIRED.
    bytes publicKey  = 2; // REQUIRED.
    bytes privateKey = 3; // OPTIONAL.
}
